--- a/.github/workflows/submit.yml
+++ b/.github/workflows/submit.yml
@@ -1577,9 +1577,9 @@ jobs:
       - linux_additional_build
       - linux_x64_test
       - linux_x86_test
-      - windows_x64_test
-      - windows_x86_test
-      - macos_x64_test
+#      - windows_x64_test
+#      - windows_x86_test
+#      - macos_x64_test
 
     steps:
       - name: Display current artifacts
