--- a/.github/workflows/submit.yml
+++ b/.github/workflows/submit.yml
@@ -36,7 +36,7 @@ jobs:
             artifact: -debug
 
     env:
-      JDK_VERSION: "${{ fromJson(needs.prerequisites.outputs.dependencies).JDK_MAJOR_VERSION }}.${{ fromJson(needs.prerequisites.outputs.dependencies).JDK_MINOR_VERSION }}.${{ fromJson(needs.prerequisites.outputs.dependencies).JDK_MICRO_VERSION }}"
+      JDK_VERSION: 1.8.0
 
     steps:
 #      - name: Checkout the source
